# QtCppBestPractices

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Copies/: Base.h  CMakeLists.txt  Derrived.h  ItemBase.h  main.cpp
Performance/: CMakeLists.txt  gettersetterperf.cpp  gettersetterperf.h  main.cpp  mainclass.cpp  mainclass.h
Pointers/: CMakeLists.txt  child.cpp  child.h  main.cpp  mainclass.cpp  mainclass.h  mythread.cpp  mythread.h
SceneGraph/: CMakeLists.txt  clockcirclebackend.cpp  clockcirclebackend.h  main.cpp  main.qml  qpaintclockcircle.cpp  qpaintclockcircle.h  qsgclockcircle.cpp  qsgclockcircle.h  registeration.h  utils.h
SignalSlot/: CMakeLists.txt  main.cpp  main.qml
Threading/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  worker.cpp  worker.h  workerthread.cpp  workerthread.h
VariadicArgs/: CMakeLists.txt  CallerClass.h  main.cpp  simpleclass.cpp  simpleclass.h
